--- a/fm/src/app/log-out/log-out.component.html
+++ b/fm/src/app/log-out/log-out.component.html
@@ -1,38 +1,18 @@
-<div class="modal-dialog ">
-  <div class="modal-content shadow">
-    <div class="modal-header">
-      <div class="modal-title">
-        <div class="d-flex">
-          <span  class="profile-set"><i class="fa-solid fa-user profile"></i></span>
-          <div class="details">
-            <li>1 Arul</li>
-            <li>user Id: 60030857082</li>
-            <li>arullatotek.com</li>
-          </div>
-        </div>
-        <div class="d-flex">
-          <button class="account">My Account</button>
-          <span class="away">
-            <i class="fa-solid fa-arrow-right-from-bracket"></i>Sign Out</span>
+<!-- <app-login *ngIf="!isLoggedIn" (loginSuccess)="handleLoginSuccess()"></app-login>
+
+
+<div class="app-container" *ngIf="isLoggedIn">
+  <div class="sidebar" [ngClass]="{ expanded: isExpanded }">
+    <div class="header" (click)="navigateTo('home', 'new-Home')">
+      <img src="../assets/images/TVM Infotech Logo.jpg" alt="Logo" />
+    </div>
+
+    <div class="menu">
+      <div class="content" *ngFor="let item of menuItems">
+        <div class="link" (click)="navigateTo(item.link, item.path)" [ngClass]="{ active: activeLink === item.link }">
+          <i [class]="item.icon"></i>
+          <div class="title-home">{{ item.title }}</div>
         </div>
       </div>
-      <button
-        type="button"
-        class="btn-close"
-        (click)="closeClick()"
-      ></button>
     </div>
-    <div class="modal-body">
-    <div class="Manag-account">
-      Manage Account
-      <div>
-    <div>Zoho</div>
-    <div></div>
-      </div>
-    </div>
-    <div class="People-opn">People Options</div>
-    <div class="zoho">Zoho People on your mobile and stay connected
-    </div>
-    </div>
-  </div>
-</div>
+  </div> -->
