--- a/fm/src/app/app.component.html
+++ b/fm/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-login *ngIf="!isLoggedIn" (loginSuccess)="handleLoginSuccess()"></app-login>
 
+
 <div class="app-container" *ngIf="isLoggedIn">
   <div class="sidebar" [ngClass]="{ expanded: isExpanded }">
     <div class="header" (click)="navigateTo('home', 'new-Home')">
@@ -7,15 +8,8 @@
     </div>
 
     <div class="menu">
-      <div
-        class="content"
-        *ngFor="let item of menuItems"
-      >
-        <div
-          class="link"
-          (click)="navigateTo(item.link, item.path)"
-          [ngClass]="{ 'active': activeLink === item.link }"
-        >
+      <div class="content" *ngFor="let item of menuItems">
+        <div class="link" (click)="navigateTo(item.link, item.path)" [ngClass]="{ active: activeLink === item.link }">
           <i [class]="item.icon"></i>
           <div class="title-home">{{ item.title }}</div>
         </div>
@@ -23,7 +17,7 @@
     </div>
   </div>
 
-  <div class="main-content" style="width: 100%">
+  <div class="main-content">
     <router-outlet></router-outlet>
   </div>
 </div>
