--- a/fm/src/app/leave-tracking/leave-tracking.component.html
+++ b/fm/src/app/leave-tracking/leave-tracking.component.html
@@ -1,11 +1,11 @@
-<nav class="breadcrumb">
+<!-- <nav class="breadcrumb">
   <span class="breadcrumb-item" *ngIf="activeNavItem === 'mydata' && activeSubNavItem === 'leave-summary'">Leave Tracking > My Data > Leave Summary</span>
   <span class="breadcrumb-item" *ngIf="activeNavItem === 'mydata' && activeSubNavItem === 'leave-balance'">Leave Tracking > My Data > Leave Balance</span>
   <span class="breadcrumb-item" *ngIf="activeNavItem === 'mydata' && activeSubNavItem === 'leave-requests'">Leave Tracking > My Data > Leave Request</span>
   <span class="breadcrumb-item" *ngIf="activeNavItem === 'teams' && activeSubNavItem === 'leave-reportees'">Leave Tracking > Teams > Reportees</span>
   <span class="breadcrumb-item" *ngIf="activeNavItem === 'teams' && activeSubNavItem === 'on-leave'">Leave Tracking > Teams > On Leave</span>
   <span class="breadcrumb-item" *ngIf="activeNavItem === 'teams' && activeSubNavItem === 'approval-leave-request'">Leave Tracking > Teams > Leave Request</span>
-</nav>
+</nav> -->
 
 <nav class="navbar">
   <div class="nav-item" [class.active]="activeNavItem === 'mydata'" (click)="navigateToMyData()">My Data</div>
