--- a/fm/src/app/app.component.scss
+++ b/fm/src/app/app.component.scss
@@ -72,7 +72,7 @@ $white: #ffffff;
   .main-content {
     flex-grow: 1;
     padding: 2rem;
-    background-color: $background-color;
+    background-color: #f5f5f5;
     box-shadow: -5px 0 15px rgba(0, 0, 0, 0.1);
     overflow-y: auto;
     animation: slide-in 0.5s ease forwards;
