--- a/fm/src/app/login/login.component.scss
+++ b/fm/src/app/login/login.component.scss
@@ -4,18 +4,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+  background: white;
   font-family: 'Poppins', sans-serif;
   position: relative;
 
   .login-card {
-    background: #1e293b;
     padding: 60px 40px 40px;
     border-radius: 20px;
-    width: 360px;
+    width: 460px;
     text-align: center;
     position: relative;
-    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(5px);
 
     /* Logo */
@@ -45,10 +43,9 @@
     h2 {
       margin: 60px 0 25px;
       font-weight: 600;
-      color: #f1f5f9;
+      color: black;
       letter-spacing: 1.2px;
       font-size: 1.6rem;
-      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
     }
 
     /* Form */
@@ -72,17 +69,21 @@
           font-size: 1.2rem;
         }
 
+        label{
+          margin-right: 190px;
+       
+          
+        }
+
         input {
           width: 100%;
           padding: 12px 12px 12px 40px;
           border-radius: 12px;
-          border: none;
+          border:1px solid rgb(96, 113, 241);
           outline: none;
           font-size: 1rem;
-          background: #2e3a59;
-          color: #f1f5f9;
-          box-shadow: inset 3px 3px 6px rgba(0, 0, 0, 0.4),
-            inset -3px -3px 6px rgba(255, 255, 255, 0.05);
+          background: rgb(251, 249, 245);
+          color: black;
           transition: all 0.3s ease;
 
           &::placeholder {
@@ -90,7 +91,7 @@
           }
 
           &:focus {
-            box-shadow: inset 3px 3px 6px rgba(0, 0, 0, 0.4),
+            box-shadow: inset 1px 1px 3px rgba(0, 0, 0, 0.4),
               inset -3px -3px 6px rgba(255, 255, 255, 0.1),
               0 0 6px #3b82f6;
           }
@@ -107,7 +108,7 @@
       }
 
       button {
-        background: linear-gradient(135deg, #3b82f6, #06b6d4);
+        background: rgb(64, 67, 231);
         color: #fff;
         padding: 12px;
         border-radius: 12px;
@@ -119,7 +120,7 @@
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 
         &:hover {
-          transform: translateY(-2px);
+          transform: translateY(-1px);
           box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
         }
 
