--- a/fm/src/app/app.component.html
+++ b/fm/src/app/app.component.html
@@ -5,14 +5,19 @@
 
 <!-- MAIN LAYOUT -->
 <div *ngIf="showLayout" class="app-container">
-  <div class="sidebar" [ngClass]="{ expanded: isExpanded }">
-    <div class="header" (click)="navigateTo('home', 'new-Home')">
+
+  <!-- Sidebar -->
+  <div class="sidebar">
+    <div class="header-logo" (click)="navigateTo('home', 'new-Home')">
       <img src="../assets/images/TVM Infotech Logo.jpg" alt="Logo" />
     </div>
 
     <div class="menu">
-      <div class="content" *ngFor="let item of menuItems">
-        <div class="link" (click)="navigateTo(item.link, item.path)" [ngClass]="{ active: activeLink === item.link }">
+      <div class="item" *ngFor="let item of menuItems">
+        <div class="link"
+             (click)="navigateTo(item.link, item.path)"
+             [ngClass]="{ 'active': activeLink === item.link }">
+
           <i [class]="item.icon"></i>
           <span class="title">{{ item.title }}</span>
         </div>
@@ -20,7 +25,31 @@
     </div>
   </div>
 
-  <div class="main-content">
-    <router-outlet></router-outlet>
+  <!-- RIGHT SECTION -->
+  <div class="right-section">
+
+    <!-- Top Header -->
+    <div class="top-header">
+      <div class="company-title">TVM Infotech Private Limited</div>
+
+      <div class="avatar-section" (click)="toggleDropdown()">
+        <div class="avatar-circle">
+          <span class="initials">{{ "u" }}</span>
+        </div>
+        <span class="user-name">user</span>
+
+        <!-- Dropdown -->
+        <div class="dropdown-menu" *ngIf="dropdownOpen">
+          <!-- <p (click)="navigateToProfile()">My Profile</p> -->
+          <p (click)="logout()">Logout</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Main content -->
+    <div class="main-content">
+      <router-outlet></router-outlet>
+    </div>
+
   </div>
 </div>
