--- a/fm/src/app/login/login.component.scss
+++ b/fm/src/app/login/login.component.scss
@@ -208,3 +208,34 @@
     padding: 50px 20px 30px;
   }
 }
+.login-btn {
+  width: 100%;
+  padding: 12px;
+  background-color: #0066cc;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  font-size: 18px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  cursor: pointer;
+}
+
+.login-btn:disabled {
+  background-color: #9bb9d6;
+  cursor: not-allowed;
+}
+
+.login-btn mat-progress-spinner {
+  --mdc-circular-progress-active-indicator-color: #ffffff !important;
+}
+
+.error{
+  font-size: 18px;
+  color: rgba(242 0 0);
+  font-weight: bold;
+
+}
