--- a/fm/src/app/app.component.html
+++ b/fm/src/app/app.component.html
@@ -1,4 +1,3 @@
-
 <!-- LOGIN PAGE -->
 <div *ngIf="!showLayout">
   <app-login (loginSuccess)="handleLoginSuccess()"></app-login>
@@ -41,21 +40,22 @@
 
         <!-- Dropdown -->
         <div class="dropdown-menu" *ngIf="dropdownOpen">
-          <!-- <p (click)="navigateToProfile()">My Profile</p> -->
           <p (click)="logout()">Logout</p>
         </div>
       </div>
     </div>
 
-<div class="backdrop" *ngIf="confirmation"></div>
-<div class="logout-response" *ngIf="confirmation">
-  <h4>Are you sure you want to log out?</h4>
-  <div class="btn-container">
-    <button class="ok-btn" (click)="ok()">Ok</button>
-    <button class="cancel-btn" (click)="Cancel()">Cancel</button>
-  </div>
-</div>
+    <!-- BACKDROP -->
+    <div class="backdrop" *ngIf="confirmation"></div>
 
+    <!-- LOGOUT CONFIRMATION MODAL -->
+    <div class="logout-response" *ngIf="confirmation">
+      <h4>Are you sure you want to log out?</h4>
+      <div class="btn-container">
+        <button class="ok-btn" (click)="ok()">Ok</button>
+        <button class="cancel-btn" (click)="Cancel()">Cancel</button>
+      </div>
+    </div>
 
     <!-- Main content -->
     <div class="main-content">
