--- a/fm/src/app/app.component.scss
+++ b/fm/src/app/app.component.scss
@@ -1,7 +1,7 @@
 /* COLORS */
-$primary: #2b2d42;
-$accent: #ef233c;
-$hover: #d90429;
+$primary: #112868;
+$accent: #007bff;
+$hover: #007bff;
 $light-bg: #f7f7f7;
 $white: #ffffff;
 
@@ -12,9 +12,13 @@ $white: #ffffff;
   background: $light-bg;
 }
 
+// *{
+//    font-family: 'EB Garamond', serif;
+// }
+
 /* SIDEBAR */
 .sidebar {
-  width: 250px;
+  width: 260px;
   min-width: 250px;
   background: $primary;
   color: $white;
@@ -41,6 +45,8 @@ $white: #ffffff;
     margin-top: 20px;
 
     .item {
+      margin-bottom: 7px;
+
       .link {
         display: flex;
         align-items: center;
@@ -48,14 +54,25 @@ $white: #ffffff;
         cursor: pointer;
         border-radius: 8px;
         transition: 0.3s;
+        font-size: 20px;
+
+        .title {
+          margin-left: 7px;
+          
+        }
 
         &:hover {
-          background: $hover;
-          transform: translateX(5px);
+          font-weight: 600;
+          background: $light-bg;
+          transform: translateX(2px);
+          color: black;
+          
         }
 
         &.active {
-          background: $accent;
+          background: $light-bg;
+          color: black;
+          font-weight: 600;
         }
 
         i {
@@ -88,9 +105,9 @@ $white: #ffffff;
   z-index: 100;
 
   .company-title {
-    font-size: 20px;
-    font-weight: 600;
-    color: #333;
+    font-size: 24px;
+    font-weight: bolder;
+    color: $primary;
   }
 
   .avatar-section {
@@ -117,8 +134,9 @@ $white: #ffffff;
     }
 
     .user-name {
-      font-size: 16px;
-      font-weight: 500;
+      font-size: 20px;
+      font-weight: 600;
+      margin-right: 15px;
     }
 
     .dropdown-menu {
@@ -128,7 +146,7 @@ $white: #ffffff;
       background: #fff;
       width: 150px;
       border-radius: 8px;
-      box-shadow: 0px 3px 10px rgba(0,0,0,0.2);
+      box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
       padding: 10px 0;
       z-index: 200;
 
@@ -140,6 +158,7 @@ $white: #ffffff;
 
         &:hover {
           background: #eeeeee;
+          
         }
       }
     }
@@ -164,6 +183,7 @@ $white: #ffffff;
     font-size: 16px !important;
   }
 }
+
 /* Backdrop */
 .backdrop {
   position: fixed;
@@ -171,7 +191,7 @@ $white: #ffffff;
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: rgba(0,0,0,0.6);
+  background: rgba(0, 0, 0, 0.6);
   z-index: 999;
 }
 
@@ -187,7 +207,7 @@ $white: #ffffff;
   border-radius: 10px;
   text-align: center;
   z-index: 1000;
-  box-shadow: 0 0 20px rgba(0,0,0,0.3);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
 
 .logout-response h4 {
@@ -227,5 +247,5 @@ $white: #ffffff;
 }
 
 .cancel-btn:hover {
-  background-color: #d9d9d9;       
+  background-color: #d9d9d9;
 }
