--- a/fm/src/app/login/login.component.html
+++ b/fm/src/app/login/login.component.html
@@ -18,7 +18,7 @@
       <div class="input-group">
         <div class="position">
         <label>Password</label>
-        <a (click)="navigateToForgotPassword()" class="forgot">Forgot Password?</a>
+        <!-- <a (click)="navigateToForgotPassword()" class="forgot">Forgot Password?</a> -->
         </div>
         <i class="bi bi-lock-fill"></i>
         <input type="password" formControlName="password"  />
