--- a/fm/src/app/leave-request/leave-request.component.html
+++ b/fm/src/app/leave-request/leave-request.component.html
@@ -37,7 +37,7 @@
           <td>{{ req.leaveType }}</td>
           <td>{{ req.leavePeriod }}</td>
           <td>{{ req.totalDays }}</td>
-          <td>{{ req.reason }}</td>
+          <td>{{ req.reasonforLeave }}</td>
           <td>{{ req.approvedBy }}</td>
 
           <td>
