--- a/fm/src/app/overview/overview.component.html
+++ b/fm/src/app/overview/overview.component.html
@@ -26,12 +26,13 @@
 
       <!-- Total Employees -->
       <div class="col-lg-3 col-md-6 col-sm-6 mb-3">
-        <div class="card stat-card h-100">
-          <div class="card-body">
-            <h6>Total Employees</h6>
-            <h2>{{ totalEmployees }}</h2>
-          </div>
-        </div>
+<div class="card stat-card h-100" (click)="openTotalEmployee()">
+  <div class="card-body">
+    <h6>Total Employees</h6>
+    <h2>{{ totalEmployees }}</h2>
+  </div>
+</div>
+
       </div>
 
       <!-- Present Today -->
