api intergated for employee detials

--- a/fm/src/app/home-my-data/total-employee/total-employee.component.html
+++ b/fm/src/app/home-my-data/total-employee/total-employee.component.html
@@ -3,27 +3,27 @@
     <thead>
       <tr>
         <th>Employee Name</th>
-        <th>Employee ID</th>
+        <th>Employee Code</th>
         <th>Designation</th>
-        <th>Phone No</th>
-        <th>Email ID</th>
+        <th>Location</th>
+        <th>Department</th>
         <th>Action</th>
       </tr>
     </thead>
 
     <tbody>
       <tr *ngFor="let data of datas">
-        <td>{{ data.firstName }} {{ data.lastName }}</td>
-        <td>{{ data.employeeId }}</td>
+        <td>{{ data.employeeName }}</td>
+        <td>{{ data.employeeCode }}</td>
         <td>{{ data.designation }}</td>
-        <td>{{ data.contactDetails.mobileNumber }}</td>
-        <td>{{ data.contactDetails.personalEmailId }}</td>
+        <td>{{ data.location }}</td>
+        <td>{{ data.department }}</td>
         <td>
           <button class="view-btn" (click)="viewEmployee(data)">View</button>
         </td>
       </tr>
 
-      <!-- Show NO DATA message when list is empty -->
+      <!-- No Data Message -->
       <tr *ngIf="datas.length === 0">
         <td colspan="6" class="no-data">No data found</td>
       </tr>
