--- a/fm/src/app/home-my-data/particular-emp/particular-emp.component.scss
+++ b/fm/src/app/home-my-data/particular-emp/particular-emp.component.scss
@@ -47,6 +47,19 @@
       }
     }
   }
+.profile-avatar {
+  width: 80px;
+  height: 80px;
+  background: #3f51b5;
+  color: white;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 32px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
 
   .profile-section {
     background: #fff;
